--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 									</header>
 									<a href="https://github.com/negarloloshahvar/Walmart-Sales-Data-Analysis" class="image fit"><img src="images/Walmart.jpg" alt="" /></a>
 									<p>In this project I will analyze the Walmart Stores Sales dataset. Walmart Stores are a chains of department stores in the US.
-										I will implement the Pandas Python library to transform, subset, filter, sort, aggregate, slice, index, and and analyze the dataset.</p>
+										I will implement the Pandas Python library to transform, subset, filter, sort, aggregate, slice, index, and analyze the dataset.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/negarloloshahvar/Walmart-Sales-Data-Analysis" class="button">View Project</a></li>
 									</ul>
