--- a/index.html
+++ b/index.html
@@ -107,6 +107,19 @@
 									</ul>
 								</article>
 
+								<article>
+									<header>
+
+										<h2><a href="https://github.com/negarloloshahvar/Case-Study-Analyzing-Customer-Churn-in-Power-BI">Customer Churn Analysis in Power BI<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/negarloloshahvar/Case-Study-Analyzing-Customer-Churn-in-Power-BI" class="image fit"><img src="images/Customer_Churn.jpg" alt="" /></a>
+									<p>In this Power BI case study, we'll investigate a dataset from an example telecom company called Databel and analyze their churn rates.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/negarloloshahvar/Case-Study-Analyzing-Customer-Churn-in-Power-BI" class="button">View Project</a></li>
+									</ul>
+								</article>
+
 						<section class="split contact">
 							<section class="alt">
 								<h3>Location</h3>
