--- a/index.html
+++ b/index.html
@@ -53,9 +53,26 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-								
-									<h2><a href="https://github.com/negarloloshahvar/Analyze-International-Debt-Statistics-with-SQL">International Debt Statistics Analysis with SQL<br />
-									</a></h2>
+
+										<h2><a href="https://github.com/negarloloshahvar/Analyze-International-Debt-Statistics-with-SQL">International Debt Statistics Analysis with SQL<br />
+										</a></h2>
+									<p>In this Power BI case study, we’ll explore a real-world job posting dataset to uncover insights for a fictional recruitment company called DataSearch.</p>
+								</header>
+								<a href="https://github.com/negarloloshahvar/Analyze-International-Debt-Statistics-with-SQL" class="image main"><img src="images/International_Debt.jpg" alt="" /></a>
+								<ul class="actions special">
+									<li><a href="https://github.com/negarloloshahvar/Analyze-International-Debt-Statistics-with-SQL" class="button large">View Project</a></li>
+								</ul>
+							</article>
+
+
+						<!-- Posts -->
+							<section class="posts">
+
+								<article>
+									<header>
+
+										<h2><a href="https://github.com/negarloloshahvar/Analyze-International-Debt-Statistics-with-SQL">International Debt Statistics Analysis with SQL<br />
+										</a></h2>
 									<p>In this project, we analyze international debt data collected by The World Bank.</p>
 								</header>
 								<a href="https://github.com/negarloloshahvar/Analyze-International-Debt-Statistics-with-SQL" class="image main"><img src="images/International_Debt.jpg" alt="" /></a>
@@ -64,8 +81,8 @@
 								</ul>
 							</article>
 
-						<!-- Posts -->
-							<section class="posts">
+
+
 								<article>
 									<header>
 										
