--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 										</a></h2>
 									<p>In this Power BI case study, we’ll explore a real-world job posting dataset to uncover insights for a fictional recruitment company called DataSearch.</p>
 								</header>
-								<a href="https://github.com/negarloloshahvar/Case-Study-Analyzing-Job-Market-Data-in-Power-BI" class="image main"><img src="images/International_Debt.jpg" alt="" /></a>
+								<a href="https://github.com/negarloloshahvar/Case-Study-Analyzing-Job-Market-Data-in-Power-BI" class="image main"><img src="images/jobdata.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/negarloloshahvar/Case-Study-Analyzing-Job-Market-Data-in-Power-BI" class="button large">View Project</a></li>
 								</ul>
