--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
 								<article>
 									<header>
 
-										<h2><a href="https://github.com/negarloloshahvar/Analyze-International-Debt-Statistics-with-SQL">International Debt Statistics Analysis with SQL<br />
+										<h2><a href="https://github.com/negarloloshahvar/Analyze-International-Debt-Statistics-with-SQL">Netflix Film Dataset Analysis with SQL<br />
 										</a></h2>
+									</header>
+									<a href="https://github.com/negarloloshahvar/Analyze-International-Debt-Statistics-with-SQL" class="image fit"><img src="images/International_Debt.jpg" alt="" /></a>
 									<p>In this project, we analyze international debt data collected by The World Bank.</p>
-								</header>
-								<a href="https://github.com/negarloloshahvar/Analyze-International-Debt-Statistics-with-SQL" class="image main"><img src="images/International_Debt.jpg" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="https://github.com/negarloloshahvar/Analyze-International-Debt-Statistics-with-SQL" class="button large">View Project</a></li>
-								</ul>
-							</article>
+									<ul class="actions special">
+										<li><a href="https://github.com/negarloloshahvar/Analyze-International-Debt-Statistics-with-SQL" class="button">View Project</a></li>
+									</ul>
+								</article>
 
 
 
