--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 								<article>
 									<header>
 
-										<h2><a href="https://github.com/negarloloshahvar/Analyze-International-Debt-Statistics-with-SQL">Netflix Film Dataset Analysis with SQL<br />
+										<h2><a href="https://github.com/negarloloshahvar/Analyze-International-Debt-Statistics-with-SQL">Analyze International Debt Statistics with SQL<br />
 										</a></h2>
 									</header>
 									<a href="https://github.com/negarloloshahvar/Analyze-International-Debt-Statistics-with-SQL" class="image fit"><img src="images/International_Debt.jpg" alt="" /></a>
